tests/miniJava/neg/000238_mutation.MiniJava
class java { public static void if ( String [ ] java ) { { } } }
